[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/fonts/sleepy-cat-font/SleepyCatRegular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/HUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 40.0
margin_top = 20.0
margin_right = 67.0
margin_bottom = 86.0
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="TimerLabel" type="Label" parent="."]
margin_left = 940.0
margin_top = 20.0
margin_right = 40.0
margin_bottom = 85.0
custom_fonts/font = SubResource( 1 )
text = "60"

[node name="GameOverScreen" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CenterContainer" type="CenterContainer" parent="GameOverScreen"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverScreen/CenterContainer"]
margin_left = 383.0
margin_top = 212.0
margin_right = 626.0
margin_bottom = 374.0

[node name="GameOver" type="Label" parent="GameOverScreen/CenterContainer/VBoxContainer"]
margin_right = 243.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 1 )
text = "Game over!"

[node name="HBoxContainer" type="HBoxContainer" parent="GameOverScreen/CenterContainer/VBoxContainer"]
margin_top = 61.0
margin_right = 243.0
margin_bottom = 90.0
alignment = 1

[node name="FinalScore" type="Label" parent="GameOverScreen/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 49.0
margin_right = 177.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 2 )
text = "Final Score :"
align = 1

[node name="FinalScoreValue" type="Label" parent="GameOverScreen/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 181.0
margin_right = 194.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="RestartButton" type="Button" parent="GameOverScreen/CenterContainer/VBoxContainer"]
margin_top = 94.0
margin_right = 243.0
margin_bottom = 114.0
text = "RESTART"

[node name="MainMenuButton" type="Button" parent="GameOverScreen/CenterContainer/VBoxContainer"]
margin_top = 118.0
margin_right = 243.0
margin_bottom = 138.0
text = "BACK TO MAIN MENU"

[node name="QuitButton" type="Button" parent="GameOverScreen/CenterContainer/VBoxContainer"]
margin_top = 142.0
margin_right = 243.0
margin_bottom = 162.0
text = "QUIT"

[connection signal="pressed" from="GameOverScreen/CenterContainer/VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="GameOverScreen/CenterContainer/VBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="GameOverScreen/CenterContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
